Reduced command text size.

--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -252,7 +252,7 @@
                             <div class="col-12 mb-3">
                                 <label class="control-name d-block h6 white">Command</label>
                                 <div class="bg-light border rounded d-block">
-                                    <code class="small d-block pt-2 pb-2 pl-3 pr-3" v-bind:class="{ 'disabled': !commandOk }">{{ command }}</code>
+                                    <code class="small d-block pt-2 pb-2 pl-3 pr-3" v-bind:class="{ 'disabled': !commandOk }"><small>{{ command }}</small></code>
                                 </div>
                             </div>
                             <div class="col-12 text-right" v-bind:class="{ 'disabled': !commandOk }">
