Added select/deselect all weights checkbox control.

--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -143,6 +143,14 @@
                 <div class="col-12">
                     <label class="control-name h5 d-block mb-3">Weight</label>
                     <div class="row">
+                        <div class="col-12 mb-3">
+                            <div class="custom-control form-control-sm custom-checkbox">
+                                <input type="checkbox" v-model="options.weights_all" id="weights-all" v-bind:value="options.weights_all" v-on:change="onChangeWeightsAll" indeterminate class="custom-control-input">
+                                <label class="custom-control-label text-secondary" for="weights-all"><small>Select / Deselect all</small></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-6 col-sm-4 col-md-3" v-for="item in choices.weight">
                             <div class="custom-control form-control-sm custom-checkbox">
                                 <input type="checkbox" v-model="options.weight" v-bind:id="'weight-' + item.value|slugify" v-bind:value="item.value" class="custom-control-input">
@@ -915,6 +923,7 @@
                             scripts_all: false,
                             scripts_filter: '',
                             weight: [],
+                            weights_all: false,
                             width: [],
                             metrics: {
                                 ascender: 0,
@@ -1057,6 +1066,15 @@
                     onChangeScripts: function() {
                         this.updateStylesOnScriptsChange();
                         this.updateSubsetOnScriptsChange();
+                    },
+                    onChangeWeightsAll: function() {
+                        if (this.options.weights_all) {
+                            this.options.weight = this.choices.weight.map(function(item) {
+                                return item.value;
+                            });
+                        } else {
+                            this.options.weight = [];
+                        }
                     },
                     buildCommand: function() {
                         command_options = []
