Changed hinting and ui version controls to inline.

--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -201,11 +201,11 @@
                     <label class="control-name h5 d-block mb-3">Hinting</label>
                     <div class="row">
                         <div class="col-6 col-sm-4 col-md-3">
-                            <div class="custom-control form-control-sm custom-radio">
+                            <div class="custom-control custom-control-inline form-control-sm custom-radio">
                                 <input type="radio" id="hinted-no" class="custom-control-input" v-model="options.hinted" v-bind:value="false">
                                 <label class="custom-control-label" for="hinted-no">No</label>
                             </div>
-                            <div class="custom-control form-control-sm custom-radio">
+                            <div class="custom-control custom-control-inline form-control-sm custom-radio">
                                 <input type="radio" id="hinted-yes" class="custom-control-input" v-model="options.hinted" v-bind:value="true">
                                 <label class="custom-control-label" for="hinted-yes">Yes</label>
                             </div>
@@ -219,11 +219,11 @@
                     <label class="control-name h5 d-block mb-3">UI Version</label>
                     <div class="row">
                         <div class="col-6 col-sm-4 col-md-3">
-                            <div class="custom-control form-control-sm custom-radio">
+                            <div class="custom-control custom-control-inline form-control-sm custom-radio">
                                 <input type="radio" id="ui-no" class="custom-control-input" v-model="options.ui" v-bind:value="false">
                                 <label class="custom-control-label" for="ui-no">No</label>
                             </div>
-                            <div class="custom-control form-control-sm custom-radio">
+                            <div class="custom-control custom-control-inline form-control-sm custom-radio">
                                 <input type="radio" id="ui-yes" class="custom-control-input" v-model="options.ui" v-bind:value="true">
                                 <label class="custom-control-label" for="ui-yes">Yes</label>
                             </div>
