--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -72,15 +72,15 @@
             <div class="row">
                 <div class="col-12">
                     <div class="row">
-                        <div class="col-12 col-md-6">
-                            <label class="control-name h5 d-block mb-3">Writing Systems Coverage<sup>*</sup></label>
+                        <div class="col-12 col-md-6 mb-3">
+                            <label class="control-name h5 d-block">Writing Systems Coverage<sup>*</sup></label>
+                        </div>
+                        <div class="col-12 col-md-6 mb-3">
+                            <input class="form-control form-control-sm" v-model="options.scripts_filter" type="text" placeholder="Filter..." v-on:input="onChangeScriptsFilter">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-md-6 order-md-2 mb-3">
-                            <input class="form-control form-control-sm" v-model="options.scripts_filter" type="text" placeholder="Filter..." v-on:input="onChangeScriptsFilter">
-                        </div>
-                        <div class="col-12 col-md-6 order-md-1 mb-3">
+                        <div class="col-12 mb-3">
                             <div class="custom-control form-control-sm custom-checkbox">
                                 <input type="checkbox" v-model="options.scripts_all" id="scripts-all" v-bind:value="options.scripts_all" v-on:change="onChangeScriptsAll" class="custom-control-input">
                                 <label class="custom-control-label text-secondary" for="scripts-all"><small>Select / Deselect all</small></label>
