Prevented custom controls label text-selection.

--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -28,6 +28,17 @@
                 pointer-events: none;
                 opacity: 0.4;
             }
+            .noselect,
+            label.custom-control-label {
+                /* https://stackoverflow.com/questions/3779534/how-do-i-disable-text-selection-with-css-or-javascript */
+              -webkit-touch-callout: none; /* iOS Safari */
+                -webkit-user-select: none; /* Safari */
+                 -khtml-user-select: none; /* Konqueror HTML */
+                   -moz-user-select: none; /* Firefox */
+                    -ms-user-select: none; /* Internet Explorer/Edge */
+                        user-select: none; /* Non-prefixed version, currently
+                                              supported by Chrome and Opera */
+            }
             .command-container {
                 position: sticky;
                 bottom: 0;
