--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -83,10 +83,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="row">
-                        <div class="col-12 col-md-6 mb-3">
+                        <div class="col-12 col-md-6 mb-2 mb-md-2">
                             <label class="control-name h5 d-block">Writing Systems Coverage<sup>*</sup></label>
                         </div>
-                        <div class="col-12 col-md-6 mb-3">
+                        <div class="col-12 col-md-6 mb-3 mb-md-2">
                             <input class="form-control form-control-sm" v-model="options.scripts_filter" type="text" placeholder="Filter..." v-on:input="onChangeScriptsFilter">
                         </div>
                     </div>
