--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -45,6 +45,12 @@
                 z-index: 10;
                 background-color: rgba(255, 255, 255, 0.9);
             }
+            .command-container code {
+                pointer-events: all;
+                max-height: 90px;
+                overflow-y: scroll;
+                line-height: 1.4;
+            }
         </style>
     </head>
     <body>
