Fixed swap state change on deselect script.

--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -1098,7 +1098,7 @@
                         if (this.isScriptSelected('Latin') || this.isScriptSelected('Greek') || this.isScriptSelected('Cyrillic')) {
                             this.options.swap_enabled = true;
                         } else {
-                            this.options.swap_enabled = true;
+                            this.options.swap_enabled = false;
                             this.options.swap_altIJ = false;
                             this.options.swap_figures = '';
                         }
